@@ -43,4 +43,4 @@ LinkingTo: Rcpp,
     RcppArmadillo
 License: GPL (>=3)
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
