@@ -3,6 +3,7 @@ RStoolbox 0.2.7
 New:
 * `rasterCVA` by default no longer enforces a minimal change magnitude (can still be accomplished with the `tmf` argument).
    Also a new argument `nct` allows to fix this threshold to a user selected value instead of deriving it based on the median of the observed change magnitudes. 
+* `unsuperClass` has a new argument `output` which allows to return the distances to all cluster centers as raster layers, instead of the class itself 
 
 Fixes:
 * `rasterCVA` estimates median values now for entire rasters and not per chunk
